--- a/templates/about/index.ejs
+++ b/templates/about/index.ejs
@@ -31,7 +31,7 @@
         <div class="element">
           <div class="elementInner cardBorder borderRadiusS shadowBoxLt">
             <img class="iconM" src="IconSearch.svg" alt="se-arrow">
-            <h3 data-aos="fade-up"> <strong> Business &#38; Product Insight:</strong>
+            <h3 data-aos="fade-up"> <strong> Business &#38; Product Insight</strong>
             </h3>
             <p>Deeply understand business objectives and product specifics, while focusing on user goals and pain
               points.</p>
@@ -43,7 +43,7 @@
         <div class="element">
           <div class="elementInner cardBorder borderRadiusS shadowBoxLt">
             <img class="iconM" src="IconCategory.svg" alt="se-arrow">
-            <h3 data-aos="fade-up"> <strong> Roadmap Contribution &#38; Team Alignment: </strong> </h3>
+            <h3 data-aos="fade-up"> <strong> Roadmap Contribution &#38; Team Alignment </strong> </h3>
             <p>Actively contribute to the product roadmap and align goals with cross-functional teams.</p>
           </div>
         </div>
@@ -57,7 +57,7 @@
             <img class="iconM" src="iconBrush.svg" alt="se-arrow">
 
 
-            <h3 data-aos="fade-up"> <strong> Design Sprint Management:</strong> </h3>
+            <h3 data-aos="fade-up"> <strong> Design Sprint Management</strong> </h3>
 
             <P>Plan and execute design sprints, setting clear deadlines for phases like discovery, definition, design,
               and testing.</P>
@@ -71,7 +71,7 @@
             <img class="iconM" src="IconDocument.svg" alt="se-arrow">
 
 
-            <h3 data-aos="fade-up"> <strong> Solution-Oriented Design:</strong> </h3>
+            <h3 data-aos="fade-up"> <strong> Solution-Oriented Design</strong> </h3>
 
             <P>Grasp product scope and stakeholder needs, integrating new designs into existing systems with a focus on
               simplicity and problem-solving.</P>
@@ -81,7 +81,6 @@
 
     </div>
   </div>
-  <div class="blankHM"></div>
   <!-- My Journey -->
 
   <!--Arrow subtitle-->
@@ -149,8 +148,191 @@
     </div>
   </div>
 
+    <!--Arrow subtitle-->
+    <%- include('../shared/arrowSubtitle', {message: 'About Me' }) %>
+    <!--Arrow subtitle-->
   <!-- My Journey -->
+  <div class="wrapper">
+    <div class="Grid Grid--full forFullResponsiveGrid">
+      <div class="Grid-cell">
+        <div class="element">
 
+          <a href="/resume.pdf" class="textUnderline" target="”_blank”">
+            <h3>Download My Resume</h3>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="Grid Grid--gutters Grid--cols-3">
+      <div class="Grid-cell">
+        <div class="element ">
+          <h3 class="">EDUCATION </h3>
+          <div class="lineHorizS"></div>
+        </div>
+
+        <div class="element">
+          <h4 data-aos="fade-up" class="aos-init aos-animate"> <strong>UC Berkeley </strong> </h4>
+          <h6 class="textItalic"> August 2015 - May 2019</h6>
+          <h5>Master of Architecture </h5>
+          <h5> Building Science &amp; Technology </h5>
+        </div>
+        <div class="element">
+          <h4 data-aos="fade-up" class="aos-init aos-animate"> <strong>Beijing University of Technology </strong> </h4>
+          <h6 class="textItalic"> September 2009 - July 2013</h6>
+          <h5>Bachelor of Art </h5>
+          <h5> Art &amp; Design &amp; Landscape Design </h5>
+        </div>
+
+        <div class="element">
+          <h4 data-aos="fade-up" class="aos-init aos-animate"> <strong>Codecademy </strong> </h4>
+          <h6 class="textItalic"> March - May 2023</h6>
+          <h5>Learn User Research: Generative</h5>
+          <h5>Learn Design Thinking: Ideation</h5>
+          <h5>Learn Interaction Design</h5>
+          <h5>Introduction to UI and UX Design </h5>
+
+          <h5>Learn Responsive Design</h5>
+          <h5>Learn Navigation Design</h5>
+          <h5>Learn JavaScript</h5>
+
+          <br>
+          <h6 class="textItalic"> March 2023 - Present</h6>
+
+          <h5>Front-End Engineer </h5>
+
+
+        </div>
+
+        <div class="element">
+          <h4 data-aos="fade-up" class="aos-init aos-animate"> <strong>Google UX Design Professional Certificate </strong> </h4>
+          <h6 class="textItalic"> August 2021 - October 2021</h6>
+          <h5>Google | Coursera</h5>
+          <h5>UI / UX Design </h5>
+        </div>
+      </div>
+
+
+      <div class="Grid-cell">
+        <div class="element ">
+          <h3>EXPERIENCE</h3>
+          <div class="lineHorizS"></div>
+        </div>
+        <div class="element ">
+          <h4 data-aos="fade-up" class="aos-init aos-animate"> <strong> BookYourPet </strong> </h4>
+          <h6 class="textItalic"> Oct. 2021 - Present</h6>
+          <h5>Calabasas, CA </h5>
+          <h5>UI/UX designer</h5>
+        </div>
+        <div class="element ">
+          <h4 data-aos="fade-up" class="aos-init aos-animate"> <strong> LASO Health </strong> </h4>
+          <h6 class="textItalic"> Sep. 2023 - Jan. 2024</h6>
+          <h5>San Antonio, Texas. </h5>
+          <h5>Product designer</h5>
+        </div>
+        <div class="element ">
+          <h4 data-aos="fade-up" class="aos-init aos-animate"> <strong>VW Studio</strong> </h4>
+          <h6 class="textItalic"> October 2021 - Present</h6>
+          <h5>Berkeley, CA </h5>
+          <h5>Product designer - Freelancer</h5>
+        </div>
+
+        <div class="element ">
+          <h4 data-aos="fade-up" class="aos-init aos-animate"> <strong>Buro Ole Scheeren </strong> </h4>
+          <h6 class="textItalic"> August 2017 — July 2018 </h6>
+          <h5>Beijing, China </h5>
+          <h5>Architectural Designer </h5>
+        </div>
+        <div class="element ">
+          <h4 data-aos="fade-up" class="aos-init aos-animate"> <strong>In Design Studio </strong> </h4>
+          <h6 class="textItalic">May 2017 - August 2017 </h6>
+          <h5>New York, U.S. </h5>
+          <h5>Summer Intern </h5>
+        </div>
+        <div class="element ">
+          <h4 data-aos="fade-up" class="aos-init aos-animate"> <strong>PDI Design Group </strong> </h4>
+          <h6 class="textItalic"> December 2013 - July 2015 </h6>
+          <h5>Beijing, China </h5>
+          <h5>Architectural Designer </h5>
+        </div>
+        <div class="element ">
+          <h4 data-aos="fade-up" class="aos-init aos-animate"> <strong>Do Union</strong> </h4>
+          <h6 class="textItalic">July 2010 - May 2012 </h6>
+          <h5>Beijing, China </h5>
+          <h5>Architectural Intern </h5>
+        </div>
+
+      </div>
+
+
+
+      <div class="Grid-cell">
+        <div class="element ">
+          <h3>SKILL&amp;TOOLS
+          </h3>
+          <div class="lineHorizS"></div>
+        </div>
+        <div class="element">
+          <h4 data-aos="fade-up" class="aos-init aos-animate"> <strong>Design Skills</strong> </h4>
+          <h5>User-Centered Design (UCD)</h5>
+          <h5>Wireframing &amp; Prototyping</h5>
+          <h5>User Research</h5>
+          <h5>Information Architecture</h5>
+          <h5>Usability Testing</h5>
+          <h5>Interaction Design</h5>
+          <h5>Responsive and Adaptive Design</h5>
+          <h5>Visual Design</h5>
+          <h5>Analytical Skills</h5>
+          <h5>Project Management</h5>
+          <h5>Business Acumen</h5>
+
+        </div>
+        <div class="element">
+          <h4 data-aos="fade-up" class="aos-init aos-animate"> <strong> Design Research </strong> </h4>
+          <h5>User Interviews </h5>
+          <h5>Surveys &amp; Questionnaires</h5>
+
+          <h5>Usability Testing</h5>
+          <h5>User Personas</h5>
+          <h5>Journey Mapping</h5>
+          <h5>Heuristic Evaluation</h5>
+          <h5>Data Analysis</h5>
+        </div>
+        <div class="element">
+          <h4 data-aos="fade-up" class="aos-init aos-animate"> <strong>Design Tools</strong> </h4>
+          <h5> Figma, Adobe XD, Sketch </h5>
+
+          <h5> Adobe Suite (Illustrator, Photoshop, InDesign) AutoCAD </h5>
+        </div>
+
+        <div class="element">
+          <h4 data-aos="fade-up" class="aos-init aos-animate"> <strong> Technical Skills</strong> </h4>
+          <h5> HTML, CSS,</h5>
+          <h5> JavaScript, EJS(Embedded JavaScript templates), jQuery </h5>
+
+        </div>
+
+
+
+        <div class="element">
+          <h4 data-aos="fade-up" class="aos-init aos-animate"> <strong>3D Design Tools </strong> </h4>
+          <h5> 3Dmax Studio, Rhino, SketchUp </h5>
+          <h5> Grasshopper, Ladybug, DIVA </h5>
+          <h5> Unity </h5>
+        </div>
+
+        <div class="element">
+          <h4 data-aos="fade-up" class="aos-init aos-animate"> <strong>Fabrication</strong> </h4>
+          <h5> 3D Printing </h5>
+          <h5> 3D Scanner (NextEngine 3D) </h5>
+          <h5> CNC (Techno Isel 3-axis CNC router) </h5>
+          <h5> Laser Cutter, Blade Cutter (Zund S3 Digital) </h5>
+        </div>
+
+
+
+      </div>
+    </div>
+  </div>
 
 
   <!-- Shared across the platform -->
