--- a/templates/shared/cardProjects.ejs
+++ b/templates/shared/cardProjects.ejs
@@ -1,4 +1,4 @@
-<% if (card ==='BYPb2bOnboarding' ) { %>
+<% if (card==='BYPb2bOnboarding' ) { %>
 <div class="Grid-cell">
   <div class="element">
     <a class="no-hover-effect">
@@ -36,7 +36,24 @@
     </a>
   </div>
 </div>
-<% } else if (card ==='BYPb2cConsumerBooking' ) { %>
+<% } else if (card==='BYPb2bOnboarding_NOPW' ) { %>
+<div class="Grid-cell">
+  <div class="element">
+    <a class="no-hover-effect" href="<%= websitePath %>/worksamples/BYP_LH_wsbeebr/BYPb2bOrboardingSubscription/">
+
+      <div class="elementCard BYP float cardBorder borderRadiusS shadowBoxLt">
+        <img src="<%= websitePath %>/projectImages/Cover_BYP_AppB2B.png" alt="BYP B2B">
+        <div class="element">
+          <div class="element">
+            <h3 class="arrCard" data-aos="fade-up"><strong>B2B SaaS | Onboarding & Subscription</strong></h3>
+            <h4>Increase the business onboarding understand BYP & improve the subscription rate</h4>
+          </div>
+        </div>
+      </div>
+    </a>
+  </div>
+</div>
+<% } else if (card==='BYPb2cConsumerBooking' ) { %>
 <div class="Grid-cell">
   <div class="element">
     <a class="no-hover-effect">
@@ -74,7 +91,25 @@
     </a>
   </div>
 </div>
-<% } else if (card ==='LHadminPanel' ) { %>
+<% } else if (card==='BYPb2cConsumerBooking_NOPW' ) { %>
+<div class="Grid-cell">
+  <div class="element">
+    <a class="no-hover-effect" href="<%= websitePath %>/worksamples/BYP_LH_wsbeebr/BYPb2cBooking/">
+      <div class="elementCard BYP float cardBorder borderRadiusS shadowBoxLt">
+        <img src="<%= websitePath %>/projectImages/Cover_BYP_B2C.png" alt="BYP B2B">
+        <div class="element">
+          <div class="element">
+            <h3 class="arrCard" data-aos="fade-up"><strong>Enhancing the Consumer Booking
+                Flow</strong></h3>
+            <h4>Increase consumer conversion rates by reducing booking abandonment</h4>
+          </div>
+        </div>
+      </div>
+    </a>
+  </div>
+</div>
+
+<% } else if (card==='LHadminPanel' ) { %>
 
 <div class="Grid-cell">
   <div class="element">
@@ -113,8 +148,24 @@
   </div>
 </div>
 
+<% } else if (card==='LHadminPanel_NOPW' ) { %>
+  <div class="Grid-cell">
+    <div class="element">
+      <a class="no-hover-effect" href="<%= websitePath %>/worksamples/BYP_LH_wsbeebr/LSAdminPanel/">
+        <div class="elementCard LASO float cardBorder borderRadiusS shadowBoxLt">
+          <img src="<%= websitePath %>/projectImages/Cover_LASO_AdminPanel.png" alt="LH Super Admin">
+          <div class="element">
+            <div class="element">
+              <h3 class="arrCard" data-aos="fade-up"><strong>Admin Panel 0 - 1</strong></h3>
+              <h4>Focus on diffetent type of user management</h4>
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
 
-<% } else if (card ==='rxZero' ) { %>
+<% } else if (card==='rxZero' ) { %>
 <div class="Grid-cell">
   <div class="element">
     <a class="no-hover-effect">
@@ -151,7 +202,23 @@
     </a>
   </div>
 </div>
-<% } else if (card ==='LHcostCal' ) { %>
+<% } else if (card==='rxZero_NOPW' ) { %>
+  <div class="Grid-cell">
+    <div class="element">
+      <a class="no-hover-effect" href="<%= websitePath %>/worksamples/BYP_LH_wsbeebr/LSRefiningRXZero/">
+        <div class="elementCard LASO float cardBorder borderRadiusS shadowBoxLt">
+          <img src="<%= websitePath %>/projectImages/Cover_LASO_RXZero.png" alt="RX Zero">
+          <div class="element">
+            <div class="element">
+              <h3 class="arrCard" data-aos="fade-up"><strong>RX Zero | Business Shift</strong></h3>
+              <h4>Focus on business shift overall idea</h4>
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+<% } else if (card==='LHcostCal' ) { %>
 <div class="Grid-cell">
   <div class="element">
     <a class="no-hover-effect">
@@ -188,106 +255,133 @@
     </a>
   </div>
 </div>
-
-<% } else if (card ==='glorify' ) { %>
-
+<% } else if (card==='LHcostCal_NOPW' ) { %>
   <div class="Grid-cell">
     <div class="element">
-      <a class="no-hover-effect" href="<%= websitePath %>/glorify/">
-        <div class="elementCard GLORIFY float cardBorder borderRadiusS shadowBoxLt">
-          <img src="<%= websitePath %>/projectImages/Cover_Glorify.png" alt="GLORIFY">
+      <a class="no-hover-effect" href="<%= websitePath %>/worksamples/BYP_LH_wsbeebr/LSCost-benefitCalculator/">
+        <div class="elementCard LASO float cardBorder borderRadiusS shadowBoxLt">
+          <img src="<%= websitePath %>/projectImages/Cover_LASO_CostCalculator.png" alt="RX Zero">
           <div class="element">
             <div class="element">
-              <h3 class="arrCard" data-aos="fade-up"><strong>Introducing the First Community to Glorify</strong></h3>
-              <h4>Grasping Glorify users' distinct requirements and shaping the bedrock for a vibrant Christian community within the app</h4>
+              <h3 class="arrCard" data-aos="fade-up"><strong>Cost-benefit Calculator</strong></h3>
+              <h4>Focus on user understand RX Zero business model, improve subscription rate</h4>
             </div>
           </div>
         </div>
       </a>
     </div>
   </div>
+<% } else if (card==='glorify' ) { %>
 
-
-
-<% } else if (card ==='appointa' ) { %>
-
-  <div class="Grid-cell">
-    <div class="element">
-      <a class="no-hover-effect" href="<%= websitePath %>/appointa/">
-        <div class="">
-          <div class="elementCard float cardBorder borderRadiusS APPOINTA shadowBoxLt">
-            <img src="<%= websitePath %>/projectImages/Cover_APPOINTA.png" alt="APPOINTA">
-            <div class="element">
-              <div class="element">
-                <h3 class="arrCard" data-aos="fade-up"><strong>APPOINTA: Interview Scheduling Made Simple</strong></h3>
-                <h4>Explore my UX case study aimed at revamping interview scheduling. This project streamlines the recruiter's tasks, speeds up hiring, and enhances scheduling experiences, reducing interview coordination time and boosting recruitment efficiency.</h4>
-              </div>
-            </div>
+<div class="Grid-cell">
+  <div class="element">
+    <a class="no-hover-effect" href="<%= websitePath %>/glorify/">
+      <div class="elementCard GLORIFY float cardBorder borderRadiusS shadowBoxLt">
+        <img src="<%= websitePath %>/projectImages/Cover_Glorify.png" alt="GLORIFY">
+        <div class="element">
+          <div class="element">
+            <h3 class="arrCard" data-aos="fade-up"><strong>Introducing the First Community to
+                Glorify</strong></h3>
+            <h4>Grasping Glorify users' distinct requirements and shaping the bedrock for a vibrant
+              Christian community within the app</h4>
           </div>
         </div>
-      </a>
-    </div>
+      </div>
+    </a>
   </div>
+</div>
 
-<% } else if (card ==='seer' ) { %>
 
-  <div class="Grid-cell">
-    <div class="element">
-      <a class="no-hover-effect" href="<%= websitePath %>/seer/">
-        <div class="elementCard float cardBorder borderRadiusS SEER shadowBoxLt">
-          <img src="<%= websitePath %>/projectImages/Cover_SEER.png" alt="SEER">
+
+<% } else if (card==='appointa' ) { %>
+
+<div class="Grid-cell">
+  <div class="element">
+    <a class="no-hover-effect" href="<%= websitePath %>/appointa/">
+      <div class="">
+        <div class="elementCard float cardBorder borderRadiusS APPOINTA shadowBoxLt">
+          <img src="<%= websitePath %>/projectImages/Cover_APPOINTA.png" alt="APPOINTA">
           <div class="element">
             <div class="element">
-              <h3 class="arrCard" data-aos="fade-up"><strong>SEER: Enhancing Brand Impact on Reddit</strong></h3>
-              <!--Analysis Report-->
-              <h4>A conceptual UX case study aimed at transforming Reddit data into actionable insights for brand marketers. This design explores the potential of intuitive analytics to understand user sentiment and engagement, offering a glimpse into the future of targeted marketing strategies.
+              <h3 class="arrCard" data-aos="fade-up"><strong>APPOINTA: Interview Scheduling Made
+                  Simple</strong></h3>
+              <h4>Explore my UX case study aimed at revamping interview scheduling. This project
+                streamlines the recruiter's tasks, speeds up hiring, and enhances scheduling
+                experiences, reducing interview coordination time and boosting recruitment efficiency.
               </h4>
             </div>
           </div>
         </div>
-      </a>
-    </div>
+      </div>
+    </a>
   </div>
-<% } else if (card ==='designSystem' ) { %>
-  <div class="Grid-cell">
-    <div class="element">
-      <a class="no-hover-effect" href="/design_system/">
-        <div class="">
-          <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
-            <img src="./projectImages/vicky_website.svg" alt="vickywang.me">
-            <div class="element">
-              <div class="element">
-                <h5>For website vickywang.me </h5>
-                <h3 class="arrCard" data-aos="fade-up"><strong>DESIGN SYSTEM</strong></h3>
-                <h4>Creating a design system to establish consistent branding and styling across the entire
-                  website
-                </h4>
-              </div>
-            </div>
-          </div>
-        </div>
-      </a>
-    </div>
-  </div>
-<% } else if (card ==='navigation' ) { %>
+</div>
 
-  <div class="Grid-cell">
-    <div class="element">
-      <a class="no-hover-effect" href="/navigation/">
-        <div class="">
-          <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
-            <img src="./projectImages/vicky_website.svg" alt="vickywang.me">
+<% } else if (card==='seer' ) { %>
+
+<div class="Grid-cell">
+  <div class="element">
+    <a class="no-hover-effect" href="<%= websitePath %>/seer/">
+      <div class="elementCard float cardBorder borderRadiusS SEER shadowBoxLt">
+        <img src="<%= websitePath %>/projectImages/Cover_SEER.png" alt="SEER">
+        <div class="element">
+          <div class="element">
+            <h3 class="arrCard" data-aos="fade-up"><strong>SEER: Enhancing Brand Impact on
+                Reddit</strong></h3>
+            <!--Analysis Report-->
+            <h4>A conceptual UX case study aimed at transforming Reddit data into actionable
+              insights for brand marketers. This design explores the potential of intuitive
+              analytics to understand user sentiment and engagement, offering a glimpse into the
+              future of targeted marketing strategies.
+            </h4>
+          </div>
+        </div>
+      </div>
+    </a>
+  </div>
+</div>
+<% } else if (card==='designSystem' ) { %>
+<div class="Grid-cell">
+  <div class="element">
+    <a class="no-hover-effect" href="<%= websitePath %>/design_system/">
+      <div class="">
+        <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
+          <img src="<%= websitePath %>/projectImages/vicky_website.svg" alt="vickywang.me">
+          <div class="element">
             <div class="element">
-              <div class="element">
-                <h5>For website case study &#64; vickywang.me </h5>
-                <h3 class="arrCard" data-aos="fade-up"><strong>NAVIGATION DESIGN</strong></h3>
-                <h4>Developing a more structured and logical navigation system for displaying case studies
-                </h4>
-              </div>
+              <h5>For website vickywang.me </h5>
+              <h3 class="arrCard" data-aos="fade-up"><strong>DESIGN SYSTEM</strong></h3>
+              <h4>Creating a design system to establish consistent branding and styling across the
+                entire
+                website
+              </h4>
             </div>
           </div>
         </div>
-      </a>
-    </div>
+      </div>
+    </a>
   </div>
+</div>
+<% } else if (card==='navigation' ) { %>
+
+<div class="Grid-cell">
+  <div class="element">
+    <a class="no-hover-effect" href="<%= websitePath %>/navigation/">
+      <div class="">
+        <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
+          <img src="<%= websitePath %>/projectImages/vicky_website.svg" alt="vickywang.me">
+          <div class="element">
+            <div class="element">
+              <h5>For website case study &#64; vickywang.me </h5>
+              <h3 class="arrCard" data-aos="fade-up"><strong>NAVIGATION DESIGN</strong></h3>
+              <h4>Developing a more structured and logical navigation system for displaying case
+                studies
+              </h4>
+            </div>
+          </div>
+        </div>
+      </div>
+    </a>
+  </div>
+</div>
 <% } %>
