--- a/templates/shared/intro.ejs
+++ b/templates/shared/intro.ejs
@@ -1,94 +1,107 @@
 <div class="wrapper">
-  <div class="element">
-    <div class="Grid--gutters">
-      <% if (version==='vicky' ) { %>
-      <p class="t-hello">hello, I'm Vicky.</p>
-      <% } else { %>
-      <p class="t-hello">hi, there!</p>
-      <% } %>
 
-
-
-      <div class="row">
-        <div class="widthMax">
-          <strong>
-            <div class="intro" data-aos="fade-up">
-              <% for(let i = 0; i < contents.length; i++) { %>
-              <h1> <%= contents[i] %> </h1>
-              <% if (i < contents.length - 1) { %>
-              <span class="divider1"></span>
-              <% } %>
-              <% } %>
-            </div>
-          </strong>
-        </div>
-        <div class="paddingleft">
-          <div class="widthFitContent">
-            <div class="dropdownSM">
-
-              <img title="Share" class="iconS hoverGrey100 paddingM borderRadiusMax dropbtn" src="<%= websitePath %>/icon/share.svg" alt="Share">
-              <div class="dropdownSM-content">
-                <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me" target="_blank">Share
-                  on LinkedIn</a>
-                <a href="https://pinterest.com/pin/create/button/?url=https://vickywang.me&media=https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_mobile.svg&description=Skilled%20UX%20Designer%20for%20B2B%20Solutions%20%26%20Consumer%20Apps%20-%20Vicky%20Wang" target="_blank">Share on Pinterest</a>
+  <div class="Grid Grid--full Grid--gutters">
+    <div class="Grid-cell">
+      <div class="element">
+        <% if (version === 'vicky' ) { %>
+        <p class="t-hello">hello, I'm Vicky.</p>
+        <% } else { %>
+        <p class="t-hello">hi, there!</p>
+        <% } %>
+        <div class="row">
+          <div class="widthMax">
+            <strong>
+              <div class="intro" data-aos="fade-up">
+                <% for(let i=0; i < contents.length; i++) { %>
+                <h1>
+                  <%= contents[i] %>
+                </h1>
+                <% if (i < contents.length - 1) { %>
+                <span class="divider1"></span>
+                <% } %>
+                <% } %>
               </div>
+            </strong>
+          </div>
+
+          <div class="paddingleft">
+            <div class="widthFitContent">
+              <div class="dropdownSM">
+
+                <img title="Share" class="iconS hoverGrey100 paddingM borderRadiusMax dropbtn" src="<%= websitePath %>/icon/share.svg" alt="Share">
+                <div class="dropdownSM-content">
+                  <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me" target="_blank">Share
+                    on LinkedIn</a>
+                  <a href="https://pinterest.com/pin/create/button/?url=https://vickywang.me&media=https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_mobile.svg&description=Skilled%20UX%20Designer%20for%20B2B%20Solutions%20%26%20Consumer%20Apps%20-%20Vicky%20Wang" target="_blank">Share on Pinterest</a>
+                </div>
+              </div>
+
             </div>
-
           </div>
+
+
         </div>
       </div>
     </div>
-
-    
-    <% if (layoutType==='aboutPage' ) { %>
-    <div class="wrapper">
-      <div class="rowToColumn centerVH">
-        <div class="widthMax">
-          <div class="Grid-cell">
-            <h3>As a UX designer, I possess a diverse range of skills and have gained experience in
-              startup
-              environments. I am fully involved in every aspect of the design process and continuously
-              aim to create
-              seamless user experiences that align with business objectives. My approach emphasizes
-              simplicity, using
-              the fewest design elements necessary to address core issues effectively.</h3>
-            <h3>My fascination with craftsmanship extends beyond just UX. It is evident both in the art
-              of crafting
-              user-centric interfaces and in appreciating the finer details of everyday life.
-            </h3>
-            <h3>I take pleasure in immersing myself in new technologies. Doing so not only fosters
-              smoother
-              collaboration with developers but also deepens my understanding of design, ultimately
-              driving
-              productivity.</h3>
-          </div>
-        </div>
-        <div class="paddingleft">
-          <div class="widthFitContent">
-            <img class="widthS" src="<%= websitePath %>/about/me.jpg" alt="icon arrow">
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <% } else { %>
-    <div class="wrapper">
-      <div class="Grid Grid--full Grid--gutters">
-        <div class="Grid-cell">
-          <h3> <%= introContentP1 %>
-          </h3>
-          <h3> <%= introContentP2 %>
-          </h3>
-          <h3> <%= introContentP3 %>
-          </h3>
-        </div>
-      </div>
-    </div>
-
-    <% } %>
-
-
-
-
   </div>
+
+
+  <% if (layoutType==='aboutPage' ) { %>
+  <div class="Grid Grid--full Grid--gutters">
+    <div class="Grid-cell">
+      <div class="element">
+        <div class="rowToColumn centerVH">
+          <div class="widthMax">
+            <div class="Grid-cell">
+              <h3>As a UX designer, I possess a diverse range of skills and have gained experience in
+                startup
+                environments. I am fully involved in every aspect of the design process and continuously
+                aim to create
+                seamless user experiences that align with business objectives. My approach emphasizes
+                simplicity, using
+                the fewest design elements necessary to address core issues effectively.</h3>
+              <h3>My fascination with craftsmanship extends beyond just UX. It is evident both in the art
+                of crafting
+                user-centric interfaces and in appreciating the finer details of everyday life.
+              </h3>
+              <h3>I take pleasure in immersing myself in new technologies. Doing so not only fosters
+                smoother
+                collaboration with developers but also deepens my understanding of design, ultimately
+                driving
+                productivity.</h3>
+            </div>
+          </div>
+          <div class="paddingleft">
+            <div class="widthFitContent">
+              <img class="widthS" src="<%= websitePath %>/about/me.jpg" alt="icon arrow">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <% } else { %>
+  <div class="Grid Grid--full Grid--gutters">
+    <div class="Grid-cell">
+      <div class="element">
+
+        <h3>
+          <%= introContentP1 %>
+        </h3>
+        <h3>
+          <%= introContentP2 %>
+        </h3>
+        <h3>
+          <%= introContentP3 %>
+        </h3>
+      </div>
+    </div>
+  </div>
+
+  <% } %>
+
+
+
+
 </div>
