--- a/templates/about/index.ejs
+++ b/templates/about/index.ejs
@@ -21,7 +21,7 @@
 }) %>
 
   <!--Arrow subtitle-->
-  <%- include('../shared/arrowSubtitle', {message: 'Method & Importance' }) %>
+  <%- include('../shared/comp_content_subtitle_arrow', {message: 'Method & Importance' }) %>
   <!--Arrow subtitle-->
 
   
@@ -86,7 +86,7 @@
   <!-- My Journey -->
 
   <!--Arrow subtitle-->
-  <%- include('../shared/arrowSubtitle', {message: 'My Journey' }) %>
+  <%- include('../shared/comp_content_subtitle_arrow', {message: 'My Journey' }) %>
   <!--Arrow subtitle-->
 
   <div class="wrapper">
@@ -151,7 +151,7 @@
   </div>
 
     <!--Arrow subtitle-->
-    <%- include('../shared/arrowSubtitle', {message: 'About Me' }) %>
+    <%- include('../shared/comp_content_subtitle_arrow', {message: 'About Me' }) %>
     <!--Arrow subtitle-->
   <!-- My Journey -->
   <div class="wrapper">
@@ -338,13 +338,13 @@
 
 
   <!-- Shared across the platform -->
-  <%- include(`${templatePath}/shared/arrowSubtitle`, {message: 'Skills & Experiences' }) %>
+  <%- include(`${templatePath}/shared/comp_content_subtitle_arrow`, {message: 'Skills & Experiences' }) %>
   <%- include(`${templatePath}/shared/tagCloud`) %>
   <%- include(`${templatePath}/shared/thankYouMessage`, { version: 'addMessage', message: `          Thank you for dropping by! If you have any feedback about this site or would like to get in touch, please feel
   free to shoot me an <a href="mailto:vickyw.design@gmail.com" class="textUnderline"> email</a>&#33;
   `}) %>
 
-  <%- include(`${templatePath}/shared/backTop`) %>
+  <%- include(`${templatePath}/shared/comp_backTop`) %>
   <%- include(`${templatePath}/shared/footer`) %>
   <!-- Shared across the platform -->
 </body>
