--- a/templates/architecture/index.ejs
+++ b/templates/architecture/index.ejs
@@ -66,7 +66,7 @@
   <div class="blankHS"></div>
 
   <!-- Arrow -->
-  <%- include('../shared/arrowSubtitle', {message: 'Selected Projects' }) %>
+  <%- include('../shared/comp_content_subtitle_arrow', {message: 'Selected Projects' }) %>
 
   <!-- Arrow -->
   <div class="blankHXS"></div>
@@ -289,14 +289,14 @@
 
 
   <!-- Shared across the platform -->
-  <%- include(`${templatePath}/shared/arrowSubtitle`, {message: 'Skills & Experiences' }) %>
+  <%- include(`${templatePath}/shared/comp_content_subtitle_arrow`, {message: 'Skills & Experiences' }) %>
   <%- include(`${templatePath}/shared/tagCloud`) %>
   <%- include(`${templatePath}/shared/thankYouMessage`, { version: 'addMessage', message: `Thank You for Visiting! please <a class="textUnderline" href="mailto:vickyw.design@gmail.com">email</a> me
   about professional projects.`}) %>
 
 
 
-  <%- include(`${templatePath}/shared/backTop`) %>
+  <%- include(`${templatePath}/shared/comp_backTop`) %>
   <%- include(`${templatePath}/shared/footer`) %>
   <!-- Shared across the platform -->
 
