--- a/templates/shared/block_cardProjects.ejs
+++ b/templates/shared/block_cardProjects.ejs
@@ -11,7 +11,7 @@
                 <label for="password">
                   <h5>Password</h5>
                 </label>
-                <input class="PWinput" type="password" id="onboardingSubscription" placeholder="Enter password">
+                <input class="PWinput psJS" type="password" id="onboardingSubscription" placeholder="Enter password">
 
                 <div class="pwIncorrectHeight">
                   <span id="pwIncorrect">Password is incorrect </span>
@@ -66,7 +66,7 @@
                 <label for="password">
                   <h5>Password</h5>
                 </label>
-                <input class="PWinput" type="password" id="consumerBooking" placeholder="Enter password">
+                <input class="PWinput psJS" type="password" id="consumerBooking" placeholder="Enter password">
 
                 <div class="pwIncorrectHeight">
                   <span id="pwIncorrect">Password is incorrect </span>
@@ -123,7 +123,7 @@
                 <label for="password">
                   <h5>Password</h5>
                 </label>
-                <input class="PWinputLH" type="password" id="adminPanel" placeholder="Enter password">
+                <input class="PWinputLH psJS" type="password" id="adminPanel" placeholder="Enter password">
 
                 <div class="pwIncorrectHeight">
                   <span id="pwIncorrect">Password is incorrect </span>
@@ -178,7 +178,7 @@
                 <label for="password">
                   <h5>Password</h5>
                 </label>
-                <input class="PWinputLH" type="password" id="rxZero" placeholder="Enter password">
+                <input class="PWinputLH psJS" type="password" id="rxZero" placeholder="Enter password">
 
                 <div class="pwIncorrectHeight">
                   <span id="pwIncorrect">Password is incorrect </span>
@@ -231,7 +231,7 @@
                 <label for="password">
                   <h5>Password</h5>
                 </label>
-                <input class="PWinputLH" type="password" id="costCalculator" placeholder="Enter password">
+                <input class="PWinputLH psJS" type="password" id="costCalculator" placeholder="Enter password">
 
                 <div class="pwIncorrectHeight">
                   <span id="pwIncorrect">Password is incorrect </span>
