--- a/templates/photography/index.ejs
+++ b/templates/photography/index.ejs
@@ -731,11 +731,11 @@
 
 
   <!-- Shared across the platform -->
-  <%- include(`${templatePath}/shared/arrowSubtitle`, {message: 'Skills & Experiences' }) %>
+  <%- include(`${templatePath}/shared/comp_content_subtitle_arrow`, {message: 'Skills & Experiences' }) %>
   <%- include(`${templatePath}/shared/tagCloud`) %>
   <%- include(`${templatePath}/shared/thankYouMessage`, { version: '', message: ''}) %>
 
-  <%- include(`${templatePath}/shared/backTop`) %>
+  <%- include(`${templatePath}/shared/comp_backTop`) %>
   <%- include(`${templatePath}/shared/footer`) %>
   <!-- Shared across the platform -->
 
