--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -84,7 +84,7 @@
   <!-- Arrow -->
 
   <%- include('shared/tagCloud') %>
-  <%- include('shared/thankYouMessage', { version: '', message: '999'}) %>
+  <%- include('shared/comp_closingMessage', { version: '', message: ''}) %>
 
   <%- include('shared/comp_backTop') %>
   <%- include('shared/footer') %>
