--- a/templates/shared/comp_content_subtitle_arrow.ejs
+++ b/templates/shared/comp_content_subtitle_arrow.ejs
@@ -1,4 +1,12 @@
-<div class="blankHS"></div>
+
+<% if (typeof spacing === 'undefined') { 
+    spacing = ''; 
+  } 
+  %>
+
+<% if (spacing === false) { %>
+
+
 <!-- Arrow -->
 <div class="wrapper">
     <div class="Grid Grid--full Grid--gutters u-textCenter">
@@ -11,5 +19,23 @@
         </div>
     </div>
 </div>
-<!-- Arrow -->
 <div class="blankHXS"></div>
+<% } else { %>
+    <div class="blankHS"></div>
+    <!-- Arrow -->
+    <div class="wrapper">
+        <div class="Grid Grid--full Grid--gutters u-textCenter">
+            <div class="Grid-cell">
+                <div class="element">
+                    <h2 class="tArrow">
+                        <%= message %> <img class="seArrow" src="<%= websitePath %>/icon/arrow-se.svg" alt="icon arrow">
+                    </h2>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Arrow -->
+
+
+
+    <% } %>
