--- a/templates/about/index.ejs
+++ b/templates/about/index.ejs
@@ -340,7 +340,7 @@
   <!-- Shared across the platform -->
   <%- include(`${templatePath}/shared/comp_content_subtitle_arrow`, {message: 'Skills & Experiences' }) %>
   <%- include(`${templatePath}/shared/tagCloud`) %>
-  <%- include(`${templatePath}/shared/thankYouMessage`, { version: 'addMessage', message: `          Thank you for dropping by! If you have any feedback about this site or would like to get in touch, please feel
+  <%- include(`${templatePath}/shared/comp_closingMessage`, { version: 'addMessage', message: `          Thank you for dropping by! If you have any feedback about this site or would like to get in touch, please feel
   free to shoot me an <a href="mailto:vickyw.design@gmail.com" class="textUnderline"> email</a>&#33;
   `}) %>
 
