--- a/templates/architecture/index.ejs
+++ b/templates/architecture/index.ejs
@@ -291,7 +291,7 @@
   <!-- Shared across the platform -->
   <%- include(`${templatePath}/shared/comp_content_subtitle_arrow`, {message: 'Skills & Experiences' }) %>
   <%- include(`${templatePath}/shared/tagCloud`) %>
-  <%- include(`${templatePath}/shared/thankYouMessage`, { version: 'addMessage', message: `Thank You for Visiting! please <a class="textUnderline" href="mailto:vickyw.design@gmail.com">email</a> me
+  <%- include(`${templatePath}/shared/comp_closingMessage`, { version: 'addMessage', message: `Thank You for Visiting! please <a class="textUnderline" href="mailto:vickyw.design@gmail.com">email</a> me
   about professional projects.`}) %>
 
 
