--- a/templates/photography/index.ejs
+++ b/templates/photography/index.ejs
@@ -733,7 +733,7 @@
   <!-- Shared across the platform -->
   <%- include(`${templatePath}/shared/comp_content_subtitle_arrow`, {message: 'Skills & Experiences' }) %>
   <%- include(`${templatePath}/shared/tagCloud`) %>
-  <%- include(`${templatePath}/shared/thankYouMessage`, { version: '', message: ''}) %>
+  <%- include(`${templatePath}/shared/comp_closingMessage`, { version: '', message: ''}) %>
 
   <%- include(`${templatePath}/shared/comp_backTop`) %>
   <%- include(`${templatePath}/shared/footer`) %>
