--- a/templates/shared/comp_closingMessage.ejs
+++ b/templates/shared/comp_closingMessage.ejs
@@ -1,5 +1,5 @@
-<% if (typeof spacing === 'undefined') { 
-  spacing = ''; 
+<% if (typeof CMspacing === 'undefined') { 
+  CMspacing = ''; 
 } 
 %>
 <% if (typeof message === 'undefined') { 
@@ -7,7 +7,7 @@
 } 
 %>
 
-<% if (spacing === false) { %>
+<% if (CMspacing === false) { %>
 <div class="wrapper">
   <div class="Grid Grid--full Grid--gutters u-textCenter">
     <div class="Grid-cell">
