design system component update

--- a/ejs_literals/nav_headerBack.ejs
+++ b/ejs_literals/nav_headerBack.ejs
@@ -1,4 +1,4 @@
-<%- include(`${templatePath}/shared/header`, {
+<%- include(`${templatePath}/shared/block_nav_header`, {
     type:'back', 
     currentPage: '',
     PageUrl:'/' 
