--- a/templates/architecture/index.ejs
+++ b/templates/architecture/index.ejs
@@ -9,8 +9,8 @@
 
 
 <body>
-  <%- include('../shared/progressBar') %>
-  <%- include('../shared/header', {type:'main', currentPage: 'ARCHITECTURE' }) %>
+  <%- include(`${templatePath}/shared/progressBar`) %>
+  <%- include(`${templatePath}/shared/block_nav_header`, {type:'main', currentPage: 'ARCHITECTURE' }) %>
   <div class="blankHM"></div>
   <!--intro-->
   <div class="wrapper">
@@ -297,7 +297,7 @@
 
 
   <%- include(`${templatePath}/shared/comp_backTop`) %>
-  <%- include(`${templatePath}/shared/footer`) %>
+  <%- include(`${templatePath}/shared/block_nav_footer`) %>
   <!-- Shared across the platform -->
 
 
