--- a/templates/photography/index.ejs
+++ b/templates/photography/index.ejs
@@ -8,8 +8,8 @@
 
 
 <body>
-  <%- include('../shared/progressBar') %>
-  <%- include('../shared/header', {type:'main', currentPage: 'PHOTOGRAPHY' }) %>
+  <%- include(`${templatePath}/shared/progressBar`) %>
+  <%- include(`${templatePath}/shared/block_nav_header`, {type:'main', currentPage: 'PHOTOGRAPHY' }) %>
   <div class="blankHM"></div>
 
   <%- include('../shared/intro', { 
@@ -736,7 +736,7 @@
   <%- include(`${templatePath}/shared/comp_closingMessage`, { version: '', message: ''}) %>
 
   <%- include(`${templatePath}/shared/comp_backTop`) %>
-  <%- include(`${templatePath}/shared/footer`) %>
+  <%- include(`${templatePath}/shared/block_nav_footer`) %>
   <!-- Shared across the platform -->
 
 </body>
